src/test/ui/issues/issue-40782.stderr
error: missing `in` in `for` loop
  --> $DIR/issue-40782.rs:2:10
   |
LL |     for i 0..2 {
   |          ^ If I were you, I would simply try adding `in` here

error: aborting due to previous error

